1.0-beta19:

  * parse claimed/returned tx id, include in data and add "open blockexplorer to claimed/returned tx" menuitem
  * Tip amount_text now set to <amount> <unit> instead of taken verbatim from message. Fixes: tip amount text newlines screw up gui (reported by remora around 10.9.2021). 

+++

1.0-beta18:

  * fix bug with amount_bch being empty in autopay
  * rename button "import 4/8/21" -> "import all available" and remove the old "import all available" button
  * minor cosmetic changes
  
1.0-beta17:

  * catch and ignore praw.exceptions.ClientException when finding tipping_comment from chaintip message (sometimes it's 4xx)
  * translate Acceptance column (simplify): "funded" -> "unlinked", "received" -> "linked"
  * bugfix: ignore unresolvable tipping_comment_ids
  * set tip amount text only if parsed correctly
  * parse tip amount text even on paid tips (for example during import process), but still do not evaluate amount_bch, amount_usd
  * change isFinished() (greying out) logic to not look at the removed Chaintip column any more

1.0-beta16:

  * better error handling in reddit poll loop (recover from connection issues)
  * improve amount parser ("1 cent." now works, for example)
  * better info when autopay fails on wallets with pw
  * simplify tiplist (remove unneeded columns)
  * "tip amount text" fixed for <currency_symbol><decimal> (was empty)
  * "ChainTip" column -> "Stealth" column (only showing "<stealth>" or "")
 
1.0-beta15:

  * errors during initial import are reported to user and output to console
  * chaintip comment association fixed
  * new status "autopaying..." to help avoid double-payments

1.0-beta14:

  * persist list of tips to wallet file
  * new "import" procedure to initially fill list of tips (if empty or old version)
  * make activation/reactivation through status bar button more robust (no more crash)
  * remove all existing "mark read", "mark unread" functions and automatically marking finished tips